<resources>
    <string name="app_name">Iris</string>
    <string name="your_name">Name</string>
    <string name="please_complete_your_n_biodata_correctly">Please complete your\n biodata correctly</string>
    <string name="loginTitle">Login</string>
    <string name="email">Email</string>
    <string name="didn_t_have_any_account_sign_up_now">Didn\'t have any account? <u>Sign Up now</u></string>
    <string name="to_continue_using_this_app_please_sign_in_first">To continue using this app, please sign in first.</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the Terms and Conditions</string>
    <string name="create_your_account">Create your Account</string>
    <string name="already_have_an_account_sign_in_now">Already have an account? <u>Login now</u></string>
    <string name="login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="password">Password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_lender_home">Home</string>
    <string name="title_lender_loans">Loans</string>
    <string name="title_lender_retributions">Retributions</string>
    <string name="title_borrower_home">Home</string>
    <string name="title_borrower_new_loan">New Loan</string>
    <string name="title_borrower_notifications">Notifications</string>
    <string name="title_borrower_home_recycleview">MADE LOANS</string>
    <string name="settings">settings</string>
    <string name="titleChoiceProfile">Account</string>
    <string name="subtitleChoiceProfile">Choose a type of account:</string>
    <string name="borrowerOptionChoiceProfile">Borrower</string>
    <string name="lenderOptionChoiceProfile">Lender</string>
    <string name="settingsString">Settings</string>
    <string name="titleIris">Iris</string>
    <string name="loans_available">LOANS AVAILABLE</string>
    <string name="loansTitle">Loans</string>
    <string name="surnames">Surnames</string>
    <string name="phone_number">Phone number</string>
    <string name="login_picture">Login picture</string>
    <string name="settings_title">Settings</string>
    <string name="method_payments_option">Method payments</string>
    <string name="language_title">Language</string>
    <string name="change_data_option">Change data</string>
    <string name="logout_option">logout</string>
    <string name="account_picture">Account picture</string>
    <string name="create_new_loan">create new loan</string>
    <string name="new_loan">New loan</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="interest">Interest: 5%</string>
    <string name="number_of_fees">Number of fees: 48</string>
    <string name="notification_picture">Notification picture</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="_0_min_ago">0 min ago</string>
    <string name="notifications_title">Notifications</string>
    <string name="title_activity_change_data">ChangeData</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>