<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".borrower.BorrowerSettingsActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/settings_title"
        android:textColor="@color/secondaryDark"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/methodPaymentsBorrowerSettingsButton"
        android:layout_width="319dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/card_background"
        android:text="@string/method_payments_option"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <Button
        android:id="@+id/changeDataBorrowerSettingsButton"
        android:onClick="toChangeData"
        android:layout_width="319dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/card_background"
        android:text="@string/change_data_option"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/methodPaymentsBorrowerSettingsButton" />

    <Button
        android:id="@+id/logoutBorrowerSettingsButton"
        android:onClick="logoutBorrower"
        android:layout_width="319dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/card_background"
        android:text="@string/logout_option"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeDataBorrowerSettingsButton" />

</androidx.constraintlayout.widget.ConstraintLayout>