<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".lender.ui.LenderHomeFragment">
    <ImageView
        android:id="@+id/logoImageVIew"
        android:contentDescription="@string/settings"
        android:layout_width="63dp"
        android:layout_height="52dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/titleHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/titleIris"
        android:textAlignment="center"
        android:textColor="@color/secondary"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/logoImageVIew"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/lenderSettingsButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/circle_background"
        android:contentDescription="@string/settingsString"
        android:onClick="onLenderSettingsClick"
        android:src="@drawable/ic_baseline_settings_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleLenderHomeRecycleViewTextView"
        android:layout_width="133dp"
        android:layout_height="20dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/card_background_teal"
        android:text="@string/loans_available"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleHome"
        tools:ignore="TextContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lenderHomeRecycleView"
        android:layout_width="match_parent"
        android:layout_height="720dp"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleLenderHomeRecycleViewTextView"
        tools:listitem="@layout/item_lender_home" />
</androidx.constraintlayout.widget.ConstraintLayout>